compiler/tests/fixtures/invalid/semantics/selector_candidate_precasts_extra_role.viv
// Invalid: selector candidate precasts role not in target

reserved action respond:
    roles:
        @responder:
            as: initiator

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        respond:
            with:
                @responder: @actor
                @phantom: @actor
        ;
        wave;
